assets/stylesheets/style.css
.navbarTop{
    overflow: hidden;
    background-color: #333;
    z-index:1;
    margin: 0;
    width: 100vw;
    animation: fadeDown;
    animation-duration: 1s;


}
.headerCont{
    display: flex;
    justify-content: center;
    align-items: center;
}
.blurDiv{
    position: absolute;

    z-index: 0;
    width: 100vw;
    height:101vh;
    animation: blurOut;
    animation-duration: 1s;

}
.fade{
    opacity: 1;
    transition: all 1s;
}
#startOfPage{
    z-index: 0;
    margin: 0;
    width:100vw;
    height:101vh;
    top:0;
    text-align: center;
    overflow: hidden;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;

}
@media screen and (min-width>=1280px) {
    .mainHeader{
        font-size: 0px;
    }
    
}
@media screen and (min-width<1280px){
    .mainHeader{
        font-size: 8vw;
    }
}
.fadeInRightEnd{
    transform: translateX(100%);
    transition: all 1s;
    opacity: 1;
}
@keyframes blurOut{
    0%{
        -webkit-backdrop-filter: blur(6px);
        backdrop-filter:blur(6px);
       
    }
    100%{
        -webkit-backdrop-filter: blur(0px);
        backdrop-filter:blur(0px);
       
    }
}

@keyframes fadeIn{
    0%{
        transform:translate(-50%, -100%);
        opacity: 0;
        
    }
    100%{
        transform: translate(-50%, -50%);
        opacity: 1;
        
    }
   
}
.mainHeader{
   
    animation: fadeIn;
    animation-duration: 1s;
    color:white;
    position: absolute;
    font-weight: bolder;
    text-shadow:2px 2px #171717;
    
    outline:2px black;
    top:50%;
    left: 50%;
    transform: translate(-50%,-50%);
    font-size: 3em;
    z-index: 2;
    
}
@keyframes fadeDown{
    0%{
        transform: translateY(-100%);
    }
    100%{
        transform: translateY(0%);
    }
}
@media only screen and (max-width:400px) {
    #startOfPage{
        
        background-image: url(/assets/images/earth.jpg);
       
      
        
    }
}
@media only screen and (min-width:401px) {
    #startOfPage{
        
        background-image: url(/assets/images/earth-big.jpg);
       
    }
}
.projHeader{
    color: white;
    
}
.navbarTop a{
    z-index: 2;
    float: left;
    height:auto;
    color: #f2f2f2;
    text-align:center;
    padding:20px 16px;
    text-decoration: none;
    font-size:17px;

}
.navbarTop a:hover{
    position: relative;
    top:0;
    overflow: hidden;
    background-color: #171717;
    color:rgb(255, 251, 251);
}
.navbarTop a:active{
    background-color: #04AA6D;
    color:white;
}
body{
    overflow-y: scroll;
    overflow-x: hidden;
    margin:0;
    padding:0;
}   
.dropdown{
    float: left;
    overflow: hidden;
}
.dropdown .dropdownBtn{
    font-size: 17px;
    border:none;
    outline: none;
    color:white;
    text-align: center;
    padding: 20px 16px;
    background-color: inherit;
    font-family: inherit;
    margin:0;
}
.dropdown .dropdownBtn:hover{
    background-color: #171717;
    color:rgb(255, 251, 251);

}
.visitBtn{
    display: inline-block;
    border-radius: 4px;
    background-color: #007bff;
    border: none;
    z-index: 2;
    color: white;
    text-align: center;
    padding: 20px;
    cursor: pointer;
    margin: 5px;
    
}
.visitBtn span{
    cursor: pointer;
    display: inline-block;
    position: relative;
    transition: 0.5s;
}
.visitBtn span:after{
    content: '\00bb';
    position: absolute;
    opacity: 0;
    top: 0;
    right: -20px;
}
.visitBtn:hover span{
    padding-right: 25px;
}
.divBlur{
    width: 100%;
    height: 100%;
    -webkit-backdrop-filter: blur(6px);
    backdrop-filter:blur(6px);
   
}
.visitBtn:hover span:after{
    opacity: 1;
    right: 0;
}
.spacer100vh{
    margin: 0;
    height: 100vh;
}
.split{
    position: absolute;
    height: 100%;
    width: 50%;
    overflow: hidden;
    padding-right: 20px;
    margin: 0;
}
.gray{
    background-color: #111;
}
.orange{
    background-color: #ff6a00;
}
.Left{
    left:0;
    margin: 0;
    padding: 0;

}
.Right{
    right: 0;
    margin: 0;
    padding: 0;
  
}
.blurClear{
    transition: all 1s;
    backdrop-filter: blur(0);
}
.centered{
    position: absolute;
    top:50%;
    z-index: 2;
    left:50%;
    transform: translate(-50%,-50%);
    text-align: center;
    overflow: hidden;
}
.blurCont{
    height: 100%;
    width: 100%;
    position: absolute; 
    z-index: 2;
}
.blurAnim{
    transition: all 1s;
    width: 100%;
    height: 100%;
    backdrop-filter: blur(3px) ;
    
}
.floatRight{
    float:right;
}
.spacer20per{
    height: 20vh;

}
.dropdown-content{
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index:1
}
.dropdown-content a{
    float:none;
    color:black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}

.hidden{
    transition: all 1s;
    opacity: 0;
}
.bgImg{
    background-image: url(/assets//images/chat.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    backdrop-filter: blur(4px);
    height: 100%;
    width: 50vw;
    position: absolute;
    background-position: center;
    right: 0;
    z-index: 1;
   
    
}
.dropdown-content a:hover{
    

    background-color: #ddd;
}
.dropdown:hover .dropdown-content{
    
  
    display: block;
}
@media screen and (max-width:1280px){
   
    .split{
        width: 100%;
    }
    .bgImg{
        width: 100%;
    }
    .respSpacer{
        height: 100dvh;
    }
    .spacer100vh{
        height: 110vh;
    }
    .blurAnim{
        backdrop-filter: blur(0px);
    }
    
}
.footer{
    margin: 0;
    height: 10vh;
    width: 100vw;
    display: flex;
    align-items: center;
  
    background-color: #171717;
}
.show{
    transition: all 1s;
    opacity: 1;
}
.footerLinks{
    justify-content: end;
    position: relative;
    margin: 20 20 0 20;
    color: white; 
    float: right;
}
@property --fill{
    syntax: '<percentage>';
    inherits: true;
    initial-value: 0%;
}
.footerLinks:hover{
    color: greenyellow;
    --fill:100%;
}
.footerLinks::after{
    position: absolute;
    z-index: -1;
    content: "";
    inset: -3px;
    border-radius: inherit;
    background: conic-gradient(greenyellow var(--fill), transparent var(--fill));
}

